src/test/ui/proc-macro/reserved-macro-names.stderr
error: name `cfg` is reserved in macro namespace
  --> $DIR/reserved-macro-names.rs:10:8
   |
LL | pub fn cfg(_: TokenStream, input: TokenStream) -> TokenStream {
   |        ^^^

error: name `cfg_attr` is reserved in macro namespace
  --> $DIR/reserved-macro-names.rs:16:8
   |
LL | pub fn cfg_attr(_: TokenStream, input: TokenStream) -> TokenStream {
   |        ^^^^^^^^

error: name `derive` is reserved in macro namespace
  --> $DIR/reserved-macro-names.rs:22:8
   |
LL | pub fn derive(_: TokenStream, input: TokenStream) -> TokenStream {
   |        ^^^^^^

error: aborting due to 3 previous errors

